force-app/main/default/objects/FIELD_OFC__c/FIELD_OFC__c.object-meta.xml
<CustomObject>
    <label>Field Office</label>
    <nameField>
        <label>Field Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>