force-app/main/default/objects/FIELD_OFC__c/fields/ITQ_EMAIL_ADR__c.field-meta.xml
<CustomField>
    <fullName>ITQ_EMAIL_ADR__c</fullName>
    <label>ITQ Mailbox</label>
    <type>Email</type>
</CustomField>