force-app/main/default/objects/FIELD_OFC__c/fields/MAIL_STOP_CD__c.field-meta.xml
<CustomField>
    <fullName>MAIL_STOP_CD__c</fullName>
    <description>This is the mail stop code of the field office and generally considered the 'field office code'.</description>
    <label>Mail Stop</label>
    <length>5</length>
    <type>Text</type>
</CustomField>