force-app/main/default/objects/FIELD_OFC__c/fields/QUOTE_QUEUE_NM__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_QUEUE_NM__c</fullName>
    <label>Quote Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>