force-app/main/default/objects/FIELD_OFC__c/fields/REGN_NM__c.field-meta.xml
<CustomField>
    <fullName>REGN_NM__c</fullName>
    <label>Region</label>
    <length>30</length>
    <type>Text</type>
</CustomField>