force-app/main/default/objects/FIELD_OFC__c/fields/UNUM_ID__c.field-meta.xml
<CustomField>
    <fullName>UNUM_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unum ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>