force-app/main/default/objects/FIELD_OFC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>ITQ_EMAIL_ADR__c</columns>
    <columns>MAIL_STOP_CD__c</columns>
    <columns>QUOTE_QUEUE_NM__c</columns>
    <columns>REGN_NM__c</columns>
    <columns>UNUM_ID__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>